@@ -1,0 +1,14 @@
+<?php
+
+if (!defined('_PS_VERSION_')) {
+    exit;
+}
+
+function upgrade_module_2_1_6($object)
+{
+    return $object->registerHook([
+        'displayOrderConfirmation',
+        'displayOrderDetail',
+        'sendMailAlterTemplateVars',
+    ]);
+}
