@@ -1,0 +1,1 @@
+<p>{$title}: <strong>{$pickupPointOrAddressDeliveryName}</strong></p>
