@@ -1,0 +1,3 @@
+<section class="box">
+    <p>{$title}: <strong>{$pickupPointOrAddressDeliveryName}</strong></p>
+</section>
